<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayout"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/identhub_layout_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/identhub_layout_margin" />

            <TextView
                android:id="@+id/title"
                style="@style/IdentHubTextView.TopHeaderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/identhub_fourthline_selfie_instructions_title"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstTickInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/identhub_fourthline_selfie_instructions_item_one"
                android:layout_marginTop="@dimen/identhub_top_paragraph_margin"
                android:drawablePadding="@dimen/identhub_margin_8"
                app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:drawableStartCompat="@drawable/identhub_ic_tick_green" />

            <TextView
                android:id="@+id/secondTickInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/identhub_fourthline_selfie_instructions_item_two"
                android:layout_marginTop="@dimen/identhub_margin_4"
                android:drawablePadding="@dimen/identhub_margin_8"
                app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/firstTickInfo"
                app:drawableStartCompat="@drawable/identhub_ic_tick_green"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/identhub_margin_16"
                android:text="@string/identhub_fourthline_selfie_instructions_description"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@+id/secondTickInfo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/noticeRoot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/identhub_top_paragraph_margin"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@+id/description">

                <ImageView
                    android:id="@+id/noticeImage"
                    android:layout_width="@dimen/identhub_notice_drawable_size"
                    android:layout_height="@dimen/identhub_notice_drawable_size"
                    android:contentDescription="@string/identhub_fourthline_selfie_instructions_notice_title"
                    android:src="@drawable/identhub_ic_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/noticeTitle"
                    style="@style/IdentHubTextView.ParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/identhub_margin_8"
                    android:text="@string/identhub_fourthline_selfie_instructions_notice_title"
                    app:layout_constraintBottom_toBottomOf="@+id/noticeImage"
                    app:layout_constraintStart_toEndOf="@+id/noticeImage"
                    app:layout_constraintTop_toTopOf="@+id/noticeImage" />

                <TextView
                    android:id="@+id/noticeDot"
                    style="@style/IdentHubTextView.SubParagraphText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/identhub_text_box_message_label_margin"
                    android:text="\u2022"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/noticeImage"
                    app:layout_constraintStart_toStartOf="@+id/noticeImage"
                    app:layout_constraintTop_toBottomOf="@+id/noticeImage" />

                <TextView
                    android:id="@+id/termsText"
                    style="@style/IdentHubTextView.SubParagraphText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/identhub_fourthline_selfie_instructions_notice_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/noticeTitle"
                    app:layout_constraintTop_toTopOf="@+id/noticeDot" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startButton"
            style="@style/IdentHubPrimaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/identhub_default_button_height"
            android:layout_marginBottom="@dimen/identhub_button_bottom_margin"
            android:layout_weight="1"
            android:text="@string/identhub_fourthline_welcome_container_continue_button" />

    </LinearLayout>
</RelativeLayout>